Fix to horizontal scrolling overflow on mobile

--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -2,6 +2,7 @@
   background: transparent;
   color: white;
   height: 100vh;
+  width: 100vw;
 }
 
 .particles {
